kubernetes/com-package-client-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: com-package-client
  labels:
    com-package: client
spec:
  containers:
    - name: com-package-client
      image: thomaslangesmfhq/com-package:0.0.1
      ports:
        - containerPort: 9000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: com-package-client
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    com-package: client
