kubernetes/com-package-server-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: com-package-server
  labels:
    com-package: server
spec:
  containers:
    - name: com-package-server
      image: thomaslangesmfhq/com-package:0.0.1
      ports:
        - containerPort: 9000
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: com-package-server
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
    - port: 9000
      targetPort: 9000
      name: grpc
  selector:
    com-package: server
